--- a/main.html
+++ b/main.html
@@ -83,8 +83,8 @@
             </div>
             <div id="errorMessage"></div>
             <div class="textareaWrapper">
-                <span class="range">Word Range: (<span class="wordRange"> Not set </span>)</span>
-                <textarea name="text" id="text" cols="30" rows="10"  placeholder="Start typing or paste something..."></textarea>
+                <div class="range">Word Range: (<span class="wordRange"> Not set </span>)</div>
+                <textarea name="text" id="text" rows="30" placeholder="Start typing or paste something..."></textarea>
             </div>
             <div class="NavigationControls">
                 <div class="countsWC">
@@ -111,8 +111,10 @@
             </div>
             <div id="errorMessage"></div>
             <div id="container"  class="container ContentWrapper">
-                <span class="range">Word Range: (<span><span class="Range">200</span>)</span>
-                <div class="textContentArea" contenteditable="true">Upload a document...</div>
+                <div class="range">
+                    Word Range: (<span><span class="Range">200</span>)</span>
+                </div>
+                <div class="textContentArea" contenteditable="true"></div>
             </div>
             <div class="NavigationControls">
                 <div class="countsWC">
@@ -147,7 +149,7 @@
                 </div>
             </section>
             <div>
-                <a href="mailto:austine.oduk577@gmail.com"title="Say Hi">
+                <a href="mailto:austine.oduk577@gmail.com"title="Say Hi" class="d-flex align-items-center justify-content-center">
                     <i class="fa-solid fa-envelope"></i> &nbsp; austine.oduk577@gmail.com
                 </a>
             </div>
